[package]
name = "gffx"
version = "0.4.0"
edition = "2024"
authors = ["Baohua Chen <cbh1117.163.com>"]
description = "An ultra-fast and memory-efficient toolkit for querying GFF files, written with Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Baohua-Chen/GFFx"
homepage = "https://github.com/Baohua-Chen"
keywords = ["gff-file", "bioinformatics", "genomics"]
categories = ["command-line-utilities", "science"]
documentation = "https://docs.rs/gffx"
exclude = ["benchmark/**", "target/**"]

[dependencies]
regex = "1.11.1"
memchr = "2.7.4"
clap = { version = "4.5.37", features = ["derive"] }
anyhow = "1.0.98"
byteorder = "1.5.0"
memmap2 = "0.9.5"
rayon = '1.10.0'
indexmap = '2.10.0'
rustc-hash = '2.1.1'
bstr = '1.12.0'
lexical-core = '1.0.5'
meminterval = '0.4.1'
serde_json = '1.0.140'
serde = { version = '1.0.219', features = ["derive"] }
bincode2 = '2.0.1'
# rust-htslib = { version = "0.51.0", default-features = false, features = ["bzip2", "lzma", "libdeflate"] }
# https://github.com/rust-bio/rust-htslib?tab=readme-ov-file
rust-htslib = { version = "0.51.0", default-features = false, features = ["bzip2", "lzma", "libdeflate"] } # No Curl feature needed 

num_cpus = '1.17.0'

rand = '0.9.2'

